--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ header {
     margin-bottom: 20px; } }
 
 /*--------------------------------------------------------------
-# index 1
+# index 
 --------------------------------------------------------------*/
 .inicio {
   margin-top: 100px; }
@@ -203,6 +203,7 @@ section {
       margin-right: 10px;
       margin-top: 10px; } }
 
+/*NUESTROS SERVICIOS*/
 .nuestrosServicios1 {
   background-color: #6f9c53;
   padding: 5px;
@@ -213,49 +214,91 @@ section {
     margin-top: .5rem;
     margin-bottom: .5rem; }
 
-.gridIndexServicios {
-  display: grid;
-  grid-gap: 5%;
-  grid-template-columns: 25% 25% 25%;
-  padding-top: 50px;
-  margin-left: 7%;
-  margin-right: 7%;
-  text-align: center;
-  justify-content: space-around;
-  grid-template-areas: "izquierda centro derecha"; }
-  @media screen and (min-width: 250px) and (max-width: 768px) {
-    .gridIndexServicios {
-      margin-bottom: 60px;
-      text-align: center;
-      grid-template-areas: "izquierda izquierda izquierda" "centro centro centro" "derecha derecha derecha"; } }
-  @media screen and (min-width: 250px) and (max-width: 768px) {
-    .gridIndexServicios {
-      justify-content: space-between;
-      margin-left: 30px;
-      margin-right: 30px; } }
-  .gridIndexServicios .gridIndexServiciosIzquierda {
-    grid-area: izquierda; }
-  .gridIndexServicios .gridIndexServiciosCentro {
-    grid-area: centro; }
-  .gridIndexServicios .gridIndexServiciosDerecha {
-    grid-area: derecha; }
-  .gridIndexServicios .imagenesIndexServicios {
-    height: 80px;
-    width: 80px;
-    margin-bottom: 10px; }
-  .gridIndexServicios .tituloIndexServicios {
-    font-size: 1.3rem;
-    margin-top: 10px; }
-  .gridIndexServicios .parrafoIndexServicios {
-    font-size: 1rem;
-    margin-top: 10px; }
-  .gridIndexServicios .parrafoIndexServicios1 {
-    font-size: 1rem;
-    margin-top: 10px; }
-    @media screen and (min-width: 250px) and (max-width: 992px) {
-      .gridIndexServicios .parrafoIndexServicios1 {
-        margin-bottom: 70px; } }
+.flip-card {
+  background-color: transparent;
+  width: 250px;
+  height: 250px;
+  display: flex;
+  margin: 50px;
+  margin-left: 100px;
+  margin-right: 100px;
+  position: relative; }
 
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); }
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg); }
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden; }
+
+.flip-card-front {
+  background-color: white;
+  color: black; }
+
+.flip-card-back {
+  background-color: white;
+  transform: rotateY(180deg); }
+  .flip-card-back h1 {
+    font-size: 1.1rem;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-right: 15px; }
+  .flip-card-back p {
+    font-size: 0.8rem;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px; }
+
+/*.gridIndexServicios{
+  display: grid; grid-gap: 5%; grid-template-columns: 25% 25% 25%; padding-top: 50px; margin-left: 7%; margin-right: 7%; 
+  text-align: center; justify-content: space-around; grid-template-areas: "izquierda centro derecha";
+     @media screen and (min-width: 250px) and (max-width: 768px) {
+      margin-bottom: 60px; text-align: center; grid-template-areas:
+       "izquierda izquierda izquierda"
+       "centro centro centro"
+       "derecha derecha derecha";       
+    }
+    @media screen and (min-width: 250px) and (max-width: 768px) {  
+      justify-content: space-between; margin-left: 30px; margin-right: 30px;
+    }  
+
+  .gridIndexServiciosIzquierda{
+    grid-area: izquierda;
+  }  
+  .gridIndexServiciosCentro{
+    grid-area: centro;
+  }
+  .gridIndexServiciosDerecha{
+    grid-area: derecha; 
+  }
+  .imagenesIndexServicios{
+    height: 80px; width: 80px; margin-bottom: 10px; 
+  }
+  .tituloIndexServicios{
+    font-size: 1.3rem; margin-top: 10px;
+  }
+  .parrafoIndexServicios{
+    font-size: 1rem; margin-top: 10px;
+  }
+  .parrafoIndexServicios1{
+    font-size: 1rem; margin-top: 10px;
+    @media screen and (min-width: 250px) and (max-width: 992px) {
+        margin-bottom: 70px; 
+      } 
+  }
+}*/
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
