--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,8 @@ section {
   @media screen and (min-width: 250px) and (max-width: 768px) {
     .gridIndex {
       margin-top: 20px;
-      grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+      grid-template-areas: "izquierda izquierda"
+ "derecha derecha"; } }
   .gridIndex #indexIzquierda {
     grid-area: izquierda; }
     @media screen and (min-width: 250px) and (max-width: 992px) {
@@ -216,8 +217,8 @@ section {
 
 .flip-card {
   background-color: transparent;
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 180px;
   display: flex;
   margin: 50px;
   margin-left: 100px;
@@ -251,15 +252,9 @@ section {
   background-color: white;
   transform: rotateY(180deg); }
   .flip-card-back h1 {
-    font-size: 1.1rem;
-    margin-top: 15px;
-    margin-left: 15px;
-    margin-right: 15px; }
-  .flip-card-back p {
-    font-size: 0.8rem;
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 20px; }
+    font-size: 1.5rem;
+    margin-top: 35px;}
+
 
 /*.gridIndexServicios{
   display: grid; grid-gap: 5%; grid-template-columns: 25% 25% 25%; padding-top: 50px; margin-left: 7%; margin-right: 7%; 
@@ -358,7 +353,8 @@ ul {
         grid-gap: 0%;
         margin-left: 10px;
         margin-right: 10px;
-        grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+        grid-template-areas: "izquierda izquierda"
+ "derecha derecha"; } }
     .nosotros-content .grid-parrafo #p-izquierda {
       grid-area: izquierda; }
       .nosotros-content .grid-parrafo #p-izquierda p {
@@ -400,7 +396,8 @@ ul {
   @media screen and (min-width: 250px) and (max-width: 992px) {
     .grid-nosotros {
       grid-gap: 3%;
-      grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+      grid-template-areas: "izquierda izquierda"
+ "derecha derecha"; } }
   .grid-nosotros #nosotros-izquierda {
     grid-area: izquierda; }
     .grid-nosotros #nosotros-izquierda h2 {
@@ -464,7 +461,9 @@ ul {
   @media screen and (min-width: 250px) and (max-width: 768px) {
     .gridIndexServicios1 {
       text-align: center;
-      grid-template-areas: "izquierda izquierda izquierda" "centro centro centro" "derecha derecha derecha"; } }
+      grid-template-areas: "izquierda izquierda izquierda"
+ "centro centro centro"
+ "derecha derecha derecha"; } }
   .gridIndexServicios1 .gridIndexServiciosIzquierda1 {
     grid-area: izquierda; }
   .gridIndexServicios1 .gridIndexServiciosCentro1 {
@@ -506,7 +505,8 @@ ul {
     grid-template-areas: "izquierda derecha"; }
     @media screen and (min-width: 250px) and (max-width: 768px) {
       #seccionEstrategia .grid-estrategia {
-        grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+        grid-template-areas: "izquierda izquierda"
+ "derecha derecha"; } }
     #seccionEstrategia .grid-estrategia #grid-estrategia-izquierda {
       grid-area: izquierda;
       margin-left: 100px;
@@ -559,7 +559,8 @@ ul {
     @media screen and (min-width: 250px) and (max-width: 768px) {
       #seccionCapacitaciones .grid-capacitaciones {
         align-content: center;
-        grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+        grid-template-areas: "izquierda izquierda"
+ "derecha derecha"; } }
     #seccionCapacitaciones .grid-capacitaciones #grid-capacitaciones-izquierda {
       grid-area: izquierda;
       margin-bottom: 20px;
@@ -612,7 +613,8 @@ ul {
   @media screen and (min-width: 250px) and (max-width: 768px) {
     #seccionComunicacion .grid-comunicacion {
       align-content: center;
-      grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+      grid-template-areas: "izquierda izquierda"
+ "derecha derecha"; } }
   #seccionComunicacion .grid-comunicacion #grid-comunicacion-izquierda {
     grid-area: izquierda;
     margin-left: 180px;
@@ -712,7 +714,8 @@ ul {
   grid-template-areas: "izquierda derecha"; }
   @media screen and (min-width: 250px) and (max-width: 768px) {
     .grid-contacto {
-      grid-template-areas: "izquierda izquierda" "derecha derecha"; } }
+      grid-template-areas: "izquierda izquierda"
+ "derecha derecha"; } }
   .grid-contacto #izquierda {
     grid-area: izquierda;
     padding: 20px;
@@ -798,7 +801,9 @@ ul {
     margin-bottom: 0px;
     padding-bottom: 0px;
     align-items: center;
-    grid-template-areas: "tel num" "sobre mail" "flecha ciudad"; }
+    grid-template-areas: "tel num"
+ "sobre mail"
+ "flecha ciudad"; }
     .grid-contacto .gridContactoIcons #tel-icono-contacto {
       grid-area: tel; }
     .grid-contacto .gridContactoIcons #tel-enlace-contacto {
@@ -870,7 +875,9 @@ footer {
     @media screen and (min-width: 250px) and (max-width: 768px) {
       footer .footer-grid {
         width: 100%;
-        grid-template-areas: "izquierda izquierda" "centro centro" "derecha derecha"; } }
+        grid-template-areas: "izquierda izquierda"
+ "centro centro"
+ "derecha derecha"; } }
     footer .footer-grid #ft-izquierda {
       grid-area: izquierda; }
     footer .footer-grid #ft-centro {
@@ -910,7 +917,9 @@ footer {
       margin-bottom: 0px;
       margin-left: 0px;
       margin-right: 0px;
-      grid-template-areas: "tel num" "sobre mail" "flecha ciudad"; }
+      grid-template-areas: "tel num"
+ "sobre mail"
+ "flecha ciudad"; }
       @media screen and (min-width: 250px) and (max-width: 768px) {
         footer .footer-grid .ft-grid-1 {
           width: 100%; } }
@@ -943,7 +952,10 @@ footer {
       padding: 0px;
       margin-bottom: 0px;
       padding-bottom: 0px;
-      grid-template-areas: "ig iglink" "fb fblink" "tw twlink" "lin linlink"; }
+      grid-template-areas: "ig iglink"
+ "fb fblink"
+ "tw twlink"
+ "lin linlink"; }
       footer .footer-grid .ft-grid-2 #insta-icono {
         grid-area: ig; }
       footer .footer-grid .ft-grid-2 #insta-enlace {
